# slogger

./: .gitignore  README.md  pyproject.toml
configuration/: slogger.yaml
slogger/: __init__.py  config.py  paths.py
slogger/config_utilities/: __init__.py  yaml_utils.py
slogger/logging/: __init__.py
